--- a/web-server/public/css/index.css
+++ b/web-server/public/css/index.css
@@ -2,3 +2,9 @@ h1{
     color: red;
     font-family: monospace;
 }
+
+.img-resize{
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+}
