dynamic pages with hbs templating

--- a/web-server/views/index.html
+++ b/web-server/views/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="root">
-        <h1>Get Help Here!</h1>
+        <h1>{{textWelcome}}</h1>
+        <img class="img-resize" src="./assests/img/Profile-removebg-preview.png" />
     </div>
+    <script src="./js/index.js"></script>
 </body>
 </html>
