--- a/web-server/views/help.html
+++ b/web-server/views/help.html
@@ -9,9 +9,7 @@
 </head>
 <body>
     <div class="root">
-        <h1>Welcome To Home Page</h1>
-        <img class="img-resize" src="./assests/img/Profile-removebg-preview.png" />
+        <h1>{{textHelp}}</h1>
     </div>
-    <script src="./js/index.js"></script>
 </body>
 </html>
